# singlestore-mcp-server

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup_dev.py  test_import.py
.do/: app-update.yaml  app.yaml
src/singlestore_mcp/: __init__.py  __main__.py  database.py  security.py  server.py  tools.py
tests/: __init__.py  test_server.py
