[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "singlestore-mcp-server"
version = "1.0.0"
description = "MCP server for SingleStore database connectivity"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Brandon Alpert", email = "brandon@booga.io"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "singlestoredb>=1.0.0",
    "aiomysql>=0.2.0",
    "pymysql>=1.1.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "sse-starlette>=1.6.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "sqlparse>=0.4.4",
    "orjson>=3.9.0",
    "structlog>=24.1.0",
    "python-json-logger>=2.0.7",
    "asyncio-throttle>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]
monitoring = [
    "sentry-sdk>=1.40.0",
    "ddtrace>=2.5.0",
]

[project.scripts]
singlestore-mcp = "singlestore_mcp.server:main"

[project.urls]
Homepage = "https://github.com/BoogaDev/singlestore-mcp-server"
Documentation = "https://github.com/BoogaDev/singlestore-mcp-server#readme"
Repository = "https://github.com/BoogaDev/singlestore-mcp-server.git"
Issues = "https://github.com/BoogaDev/singlestore-mcp-server/issues"

[tool.setuptools]
packages = ["singlestore_mcp"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
singlestore_mcp = ["*.json", "*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=singlestore_mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "asyncio: marks tests as async",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "C90", "I", "N", "B", "UP"]
ignore = ["E501", "B008", "C901"]
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true